# ramsey

./: .gitignore  README.md  clique_algorithms.py  data.py  dregular_ramsey.ipynb  experiment_gym_ramsey_env.py  gym_ramsey_game.py  operations.py  pyproject.toml  ramsey_game.py  requirements.txt  rewards.py  rl_tests.py  utils.py
experiments/: skrl_wip.py  torchrl_cem.py
ramsey/: clique_algorithms.py  env_utils.py  gym_ramsey_env.py  ramsey_env.py  rewards.py
ramsey/data/: data.py
tests/: test_clique_counters.py  test_env_utils.py  test_ramsey_env.py  test_rewards.py
